[package]
name = "DatePicker_Versuch"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.22.0"
egui = "0.22.0"
egui_extras = { version = "0.22.0", features = ["datepicker"] }
chrono = "0.4.26"
rusqlite = "0.29.0"
notify-rust = "4.11.3"
tokio = { version = "1.40.0", features = ["full"] }
